Add *.ycs import/export support